--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       crossorigin=""
     ></script>
 
+    <script defer src="./js/index.js"></script>
     <!-- <script defer src="other.js"></script> -->
     <title>mapty</title>
   </head>
@@ -128,7 +129,7 @@
       </p>
     </div>
 
-    <script src="./js/index.js"></script>
+    <!-- <script src="./js/index.js"></script> -->
     <div id="map"></div>
   </body>
 </html>
